--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
 port = 5000
-MONGO_URI = mongodb+srv://younes:kawazaki@cluster0.j5na6.mongodb.net/crowdfunding?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://younes:kawazaki@cluster0.j5na6.mongodb.net/codemavricks?retryWrites=true&w=majority
 JWT_SECRET = 123456
 CLIENT_URL = *
