--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "swagger-jsdoc": "^6.2.7"
   }
 }
