--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@next/font": "^13.1.6",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "@web3-react/walletlink-connector": "^6.2.14",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
