--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
     "@web3-react/walletlink-connector": "^6.2.14",
+    "clsx": "^1.2.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
