--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@ethersproject/providers": "^5.7.2",
     "@ethersproject/units": "^5.7.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
     "@next/font": "^13.1.6",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
     "@web3-react/walletlink-connector": "^6.2.14",
     "clsx": "^1.2.1",
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
+    "@mui/joy": "^5.0.0-alpha.78",
     "@types/node": "18.11.3",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.21",
