--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@ethersproject/providers": "^5.7.2",
     "@ethersproject/units": "^5.7.0",
     "@next/font": "^13.1.6",
-    "@types/web3": "^1.2.2",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
@@ -19,8 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-toastify": "^9.1.1",
-    "web3": "^1.9.0"
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
