--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
     "@mui/joy": "^5.0.0-alpha.78",
