--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/connectors.js", "components/Modals/ConnectModal.jsx", "components/layout/Header.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "utils/connectors.js",
+    "components/Modals/ConnectModal.jsx",
+    "components/layout/Header.jsx"
+  ],
   "exclude": ["node_modules"]
 }
