--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@web3-react/walletlink-connector": "^6.2.14",
     "clsx": "^1.2.1",
     "ethers": "^6.3.0",
+    "moment": "^2.29.4",
     "next": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
